# ptcrab

./: Cargo.toml  LICENSE  README.md
examples/: create_ptv.rs  modify_ptv.rs
src/: data.rs  lib.rs  ptvoice.rs  value.rs  voice.rs
src/data/: from_read.rs  from_read_var.rs  write_to.rs  write_var_to.rs
src/ptvoice/: envelope.rs  error.rs  unit.rs  wave.rs
src/value/: key.rs  max_len.rs  pan_volume.rs  tuning.rs  volume.rs
src/voice/: flags.rs
