[package]
name = "ptcrab"
version = "0.1.0"
description = "A pure-Rust alternative to the official pxtone library."
authors = ["Jacob Cazabon <j@cob.im>"]
repository = "https://github.com/majorcob/ptcrab/"
license = "MIT"
edition = "2021"

[dependencies]
duplicate = "1.0.0"
thiserror = "1.0.49"

[dev-dependencies]
anyhow = "1.0.75"
